--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,7 @@
+/* Bootstrap Icons */
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css');
+
+/* Tailwind */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
